--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pdfmake": "^0.2.7",
     "primeflex": "^3.3.1",
     "rxjs": "~7.5.0",
+    "svgsaver": "^0.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
